--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -52,5 +52,8 @@ Rails/ApplicationRecord:
   Enabled: false
 
 Naming/VariableNumber:
+  Enabled: false
+
+Rails/OutputSafety:
   Exclude:
-    - 'test/**/*'
+    - 'app/presenters/**/*'  
